--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,9 @@
-[]
+[
+    {
+        "id": 2,
+        "description": "sona",
+        "status": "todo",
+        "createdAt": "2025-07-11 15:59:58",
+        "updatedAt": "2025-07-11 15:59:58"
+    }
+]
